# adventofcode2022

./: Cargo.toml  LICENSE  README.md
day01/: Cargo.toml  README.md
day01/src/: main.rs
day02/: Cargo.toml  README.md
day02/src/: main.rs
day03/: Cargo.toml  README.md
day03/src/: main.rs
day04/: Cargo.toml  README.md
day04/src/: main.rs
